[tool.poetry]
name = "proggy"
version = "0.3.0"
description = "A progress bar generator."
authors = ["Tarcísio Eduardo Moreira Crocomo <tarcisioe@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
flake8 = "^3.7.9"
mypy = "^0.761"
pylint-quotes = "^0.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
