[tool.poetry]
name = "proggy"
version = "0.4.3"
description = "A progress bar generator."
authors = ["Tarcísio Eduardo Moreira Crocomo <tarcisioe@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
flake8 = "^3.7.9"
pylint-quotes = "^0.2.1"
black = "^19.10b0"
isort = "^4.3.21"
flake8-bugbear = "^20.1.4"

[tool.black]
skip_string_normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
